@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.0'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.2.3'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.subscriptionservice'
@@ -28,10 +28,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'        // Веб-приложение
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'   // Работа с БД
 	implementation 'org.springframework.boot:spring-boot-starter-validation' // Валидация данных
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	// База данных
-	implementation 'org.postgresql:postgresql'                               // PostgreSQL драйвер
-	implementation 'org.flywaydb:flyway-core'                               // Миграции БД
+	runtimeOnly 'org.postgresql:postgresql'                               // PostgreSQL драйвер
+	implementation 'org.liquibase:liquibase-core'                           // Liquibase для миграций
 
 	// API документация
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' // Swagger UI
@@ -40,15 +41,22 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'                                  // Автогенерация кода
 	annotationProcessor 'org.projectlombok:lombok'
 
-	// Тестирование
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Spring Test
-	testImplementation 'org.instancio:instancio-junit:3.6.0'               // Генерация тестовых данных
-	testImplementation 'org.instancio:instancio-core:3.6.0'
-
+	// MapStruct
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
+	// Тестирование
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Spring Test
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }.absolutePath
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += [
+		'-Amapstruct.defaultComponentModel=spring'
+	]
 }
